<resources>
    <string name="app_name">Bankee</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="profile">Profile</string>
    <string name="wellcome_back">Wellcome Back</string>
    <string name="pronob_kumar_mondol">Pronob Kumar Mondol</string>
    <string name="todo">TODO</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="amount">Amount</string>
    <string name="recharge">Recharge</string>
    <string name="enter_ammount">Enter Ammount</string>
    <string name="cash_out">Cash Out</string>
    <string name="enter_agent_email">Enter Agent Email</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sophia_calzoni">Sophia Calzoni</string>
    <string name="send_money">Send Money</string>
    <string name="take_acc_to_acc">Take acc to acc</string>
    <string name="tap_to_recharge">Tap to recharge</string>
    <string name="tap_to_cash_out">Tap to cash out</string>
    <string name="contacts">Contacts</string>
    <string name="_05_22">05/22</string>
    <string name="buisness_platinum">Buisness Platinum</string>
    <string name="_1234_5678_9012_3456">1234 5678 9012 3456</string>
    <string name="total_transfer">Total Transfer</string>
    <string name="_500">500</string>
    <string name="transfer_details">Transfer Details:</string>
    <string name="transfer_type">Transfer Type</string>
    <string name="transfer_types">Transfer Type :</string>
    <string name="from">From</string>
    <string name="froms">From :</string>
    <string name="pronob_gmail_com">pronob@gmail.com</string>
    <string name="to">To</string>
    <string name="s">To :</string>
    <string name="sagor_gmail_com">sagor@gmail.com</string>
    <string name="ammount">Ammount</string>
    <string name="ammounts">Ammount :</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_about_deleting_this_card">Are you sure about deleting this Card?</string>
    <string name="are_you_sure_want_to_log_out">Are you sure want to Log Out?</string>
    <string name="log_out">Log Out</string>
    <string name="leagal_policies"><![CDATA[Leagal & Policies]]></string>
    <string name="_1_terms">1. Terms</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget ornare quam vel facilisis feugiat amet sagittis arcu, tortor. Sapien, consequat ultrices morbi orci semper sit nulla. Leo auctor ut etiam est, amet aliquet ut vivamus. Odio vulputate est id tincidunt fames.</string>
    <string name="changes_to_the_service_and_or_terms">Changes to the Service and/or Terms:</string>
    <string name="hello">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget ornare quam vel facilisis feugiat amet sagittis arcu, tortor. Sapien, consequat ultrices morbi orci semper sit nulla. Leo auctor ut etiam est, amet aliquet ut vivamus. Odio vulputate est id tincidunt fames.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget ornare quam vel facilisis feugiat amet sagittis arcu, tortor. Sapien, consequat ultrices morbi orci semper sit nulla. Leo auctor ut etiam est, amet aliquet ut vivamus. Odio vulputate est id tincidunt fames.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget ornare quam vel facilisis feugiat amet sagittis arcu, tortor. Sapien, consequat ultrices morbi orci semper sit nulla. Leo auctor ut etiam est, amet aliquet ut vivamus. Odio vulputate est id tincidunt fames.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget ornare quam vel facilisis feugiat amet sagittis arcu, tortor. Sapien, consequat ultrices morbi orci semper sit nulla. Leo auctor ut etiam est, amet aliquet ut vivamus. Odio vulputate est id tincidunt fames.</string>
    <string name="legal_policies">Legal Policies</string>
    <string name="send_money_with_email">Send Money With Email</string>
    <string name="_100_000">$100,000</string>
    <string name="enter_reciver_email">Enter Reciver Email</string>
    <string name="password_changed_successfully">Password Changed Successfully</string>
    <string name="oops_something_went_wrong">OOps!! Something Went Wrong..</string>
    <string name="continuee">Continue</string>
    <string-array name="card_types">
        <item>Visa</item>
        <item>Mastercard</item>
    </string-array>
</resources>